--- a/flamethrower/basil/templates/basil/_base.html
+++ b/flamethrower/basil/templates/basil/_base.html
@@ -23,7 +23,7 @@
 <script src="{% static "vendor/jquery-2.1.4.js" %}"></script>
 <script src="{% static "vendor/underscore.js" %}"></script>
 <script src="{% static "vendor/backbone.js" %}"></script>
-<script src="{% static "js/scarlett.js" %}"></script>
+<script src="{% static "js/flamethrower.js" %}"></script>
 <script src="{% static "js/views/home_view.js" %}"></script>
 <script src="{% static "js/views/places_view.js" %}"></script>
 <script src="{% static "js/models/place_model.js" %}"></script>
